--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Imports: 
     dplyr,
     readr,
@@ -24,4 +24,5 @@ Imports:
     stringr,
     fuzzyjoin,
     lubridate,
-    here
+    here,
+    magrittr
