Insert roxygen skeleton to all Qualtrics functions, and generate basic doc files in ./man; additional updates to Qualtrics vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,12 @@ export(combine_mac_uds_encounters)
 export(custom_fuzzy_join)
 export(impute_missing_values)
 export(negative_values_to_na)
+export(qualtrics_dart_item_score)
+export(qualtrics_hot_spot_score)
+export(qualtrics_sdr_item_response)
+export(qualtrics_sdr_item_score)
+export(qualtrics_tom_item_response)
+export(qualtrics_ucsf_api_credentials)
 export(read_csv_by_string_search)
 export(remove_rows_with_mult_NAs)
 export(reverse_scoring)
