--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(calculate_current_past_difference)
 export(combine_current_and_past_observations)
 export(combine_mac_uds_encounters)
 export(custom_fuzzy_join)
+export(filter_if_all_na)
+export(filter_if_any_na)
 export(impute_missing_values)
 export(negative_values_to_na)
 export(qualtrics_dart_item_score)
@@ -15,6 +17,5 @@ export(qualtrics_sdr_item_score)
 export(qualtrics_tom_item_response)
 export(qualtrics_ucsf_api_credentials)
 export(read_csv_by_string_search)
-export(remove_rows_with_mult_NAs)
 export(reverse_scoring)
 export(select_by_test_name)
