Update README and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(calculate_cdr_plus_nacc_ftld)
 export(calculate_current_past_difference)
 export(combine_current_and_past_observations)
 export(combine_mac_uds_encounters)
-export(custom_fuzzy_join)
+export(filter_for_first_visit)
+export(filter_for_most_recent_visit)
 export(filter_if_all_na)
 export(filter_if_any_na)
 export(impute_missing_values)
+export(join_key_date_difference)
 export(negative_values_to_na)
 export(qualtrics_dart_item_score)
 export(qualtrics_hot_spot_score)
